[package]
name = "kirorunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
closure = "0.3.0"
fuzzy-matcher = "0.3.7"
gdk = "0.15.4"
gio = "0.15.12"
gtk = "0.15.5"
gtk-layer-shell = { version = "0.4.1", features = ["v0_6"] }
